--- a/curso.mvc.web/curso.mvc.web.csproj
+++ b/curso.mvc.web/curso.mvc.web.csproj
@@ -6,6 +6,8 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.5" />
+    <PackageReference Include="Refit" Version="6.0.94" />
+    <PackageReference Include="Refit.HttpClientFactory" Version="6.0.94" />
   </ItemGroup>
 
 </Project>
